<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jiffy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">jiffy</string>

    <!-- Login -->
    <string name="login">Anmelden</string>
    <string name="hint_id">Benutzername</string>
    <string name="hint_pw">Passwort</string>

    <!-- Main -->
    <string name="btn_education">Kinder und Noten</string>
    <string name="btn_writeMsg">Schreiben</string>
    <string name="btn_readMsg">Lesen</string>
    <string name="lbl_newMsg">x</string>
    <string name="lbl_countMsg">0</string>
    <string name="img_newMsg">Neue Nachricht</string>

    <!-- Education -->
    <string name="tab_kind1">Elisabeth</string>
    <string name="tab_kind2">Naomi</string>
    <string name="lbl_subj_ma">Mathematik: 2,4</string>
    <string name="lbl_subj_en">Englisch: 3,1</string>
    <string name="lbl_subj_de">Deutsch: 3,1</string>
    <string name="lbl_subj_inf">Informatik: 1,0</string>
    <string name="lbl_subj_rel">Religion: 2,2</string>
    <string name="lbl_subj_bk">Kunst: 1,7</string>

    <!-- Write Messages -->
    <string name="btn_send">Senden</string>
    <string name="list_name">Empfänger</string>
    <string name="listitem_receiver_name">Frau O. Felgendreher</string>
    <string name="listitem_receiver_role">Mathematik-Lehrerin</string>
    <string name="keyb_verbal">ABC</string>
    <string name="keyb_imaginal">Icons</string>
    <string name="addReceiver">Empfänger hinzufügen</string>
    
    <!-- Write Messages -->
    <string name="read_msgicon">Nachricht Icon</string>
    <string name="read_rolesender">Mathematik Lehrerin von Alice</string>
    <string name="read_namesender">Frau Felgendreher</string>
    <string name="read_up">▲</string>
    <string name="read_prevteacher">◀</string>
    <string name="read_relevance">Relevanz der Meldung</string>
    <string name="read_time">⌚ 07.07.07 - 07:07</string>
    <string name="read_subject">Note Klassenarbeit Mathematik</string>
    <string name="read_msgtext">Alice hat eine 1 in Mathe.</string>
    <string name="read_ack">Fertig gelesen</string>
    <string name="read_nextteacher">▶</string>
    <string name="read_nextmsg">▼</string>

</resources>