<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_education"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableTop="@drawable/icon_education_btnsize"
        android:onClick="seeEducation"
        android:text="@string/btn_education" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:gravity="center">

        <TextView
            android:id="@+id/lbl_countMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="right"
            android:text="@string/lbl_countMsg"
            android:textSize="56sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_newMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:text="@string/lbl_newMsg"
            android:textStyle="bold"
            android:textSize="46sp"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_newMsg"
            android:src="@drawable/icon_newmsg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_writeMsg"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableTop="@drawable/icon_writemsg_btnsize"
            android:onClick="sendMsg"
            android:text="@string/btn_writeMsg" />

        <Button
            android:id="@+id/btn_readMsg"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableTop="@drawable/icon_readmsg_glass_btnsize"
            android:onClick="readMsg"
            android:text="@string/btn_readMsg" />
    </LinearLayout>

</LinearLayout>